# deepmd-kit-ui

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pytest.ini  vite.config.ts
.github/workflows/: build.yml  check.yml
crates/dpstudio/: Cargo.toml
crates/dpstudio/src/: main.rs
crates/studio-core/: Cargo.toml
crates/studio-core/src/: examples.rs  lib.rs  manager.rs  process.rs  runtime.rs  training.rs  types.rs
docs/: index.md
installer/windows/: deepmd-studio.iss
python/deepmd_ui/: __init__.py  bridge.py
python/tests/: test_bridge.py
scripts/: build_runtime.py  build_windows_installer.ps1  generate_update_manifest.py  prepare-sidecar.mjs  runtime_manager.py  set_version.py  triton_cuda_smoke.py
scripts/tests/: test_build_runtime.py  test_runtime_manager.py  test_update_manifest.py
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/runtime/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/: ChoiceSelect.tsx  CommandForm.tsx  Icons.tsx  InputSchemaForm.tsx  Sidebar.tsx  SystemDetailsModal.tsx  TaskConsole.tsx  TrainingMonitor.tsx
src/lib/: arguments.test.ts  arguments.ts  chartScale.test.ts  chartScale.ts  inputBuilder.test.ts  inputBuilder.ts  mockTrainingSchema.ts  studio.ts  trainingMetrics.test.ts  trainingMetrics.ts
src/views/: Dashboard.tsx  Examples.tsx  Runtime.tsx  Tasks.tsx  TrainingWorkbench.tsx  Workbench.tsx
