# SPDX-License-Identifier: LGPL-3.0-or-later

[workspace]
members = ["crates/studio-core", "crates/dpstudio", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"
authors = ["DeepModeling"]
repository = "https://github.com/OutisLiPKU/deepmd-kit-ui"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
