# SPDX-License-Identifier: LGPL-3.0-or-later

[package]
name = "deepmd-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Modern cross-platform desktop workbench for DeePMD-kit"

[lib]
name = "deepmd_studio"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "deepmd-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
deepmd-studio-core = { path = "../crates/studio-core" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
