# SPDX-License-Identifier: LGPL-3.0-or-later

[package]
name = "deepmd-studio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared process and protocol core for DeePMD Studio"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.26.0"
